--- a/templates/wangjingze/index.html
+++ b/templates/wangjingze/index.html
@@ -16,6 +16,11 @@
         <button id="sidebar_close" class="w3-bar-item w3-large">&times;</button>
         <a href="/tpl/sorry/" class="w3-bar-item w3-button">为所欲为</a>
         <a href="/tpl/wangjingze/" class="w3-bar-item w3-button">我就是饿死</a>
+        <a href="/tpl/kongming/" class="w3-bar-item w3-button">孔明</a>
+        <a href="/tpl/dagong/" class="w3-bar-item w3-button">打工</a>
+        <a href="/tpl/diandongche/" class="w3-bar-item w3-button">电动车</a>
+        <a href="/tpl/jinkela/" class="w3-bar-item w3-button">金坷垃</a>
+        <a href="/tpl/marmot/" class="w3-bar-item w3-button">marmot</a>
     </div>
 
     <!-- Show Button -->
@@ -26,7 +31,7 @@
     <!-- Main Frame -->
     <div class="w3-container w3-display-container w3-half">
         <div class="w3-container">
-            <img src="/static/wangjingze/example.png" alt="Lights" style="width:100%">
+            <video src="/static/wangjingze/template.mp4" controls="controls" autoplay></video>
             <h1 class="w3-text-blue">在线生成Sorry,动图</h1>
         </div>
 
