--- a/templates/dagong/index.html
+++ b/templates/dagong/index.html
@@ -31,74 +31,53 @@
     <!-- Main Frame -->
     <div class="w3-container w3-display-container w3-half">
         <div class="w3-container">
-            <video src="/static/sorry/template.mp4" controls="controls" autoplay></video>
+            <video src="/static/dagong/template.mp4" controls="controls" autoplay></video>
             <h1 class="w3-text-blue">在线生成Sorry,动图</h1>
         </div>
 
         <div class="w3-container">
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第一句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="好啊">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第一句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="没有钱啊 肯定要做的啊">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第二句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="就算你是一流工程师">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第二句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="不做的话没有钱用">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第三句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="就算你出报告再完美">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第三句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="那你不会去打工啊">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第四句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="我叫你改报告你就要改">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第四句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="有手有脚的">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第五句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="毕竟我是客户">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第五句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="打工是不可能打工的">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第六句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="客户了不起啊">
-            </p>
-
-            <p>
-                <label class="w3-text-blue">
-                    <b>第七句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="sorry 客户真的了不起">
-            </p>
-
-            <p>
-                <label class="w3-text-blue">
-                    <b>第八句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="以后叫他天天改报告">
-            </p>
-
-            <p>
-                <label class="w3-text-blue">
-                    <b>第九句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="天天改 天天改">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第六句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="这辈子不可能打工的">
+</p>
 
             <div id="result"></div>
 
