--- a/templates/diandongche/index.html
+++ b/templates/diandongche/index.html
@@ -31,74 +31,53 @@
     <!-- Main Frame -->
     <div class="w3-container w3-display-container w3-half">
         <div class="w3-container">
-            <video src="/static/sorry/template.mp4" controls="controls" autoplay></video>
+            <video src="/static/diandongche/template.mp4" controls="controls" autoplay></video>
             <h1 class="w3-text-blue">在线生成Sorry,动图</h1>
         </div>
 
         <div class="w3-container">
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第一句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="好啊">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第一句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="戴帽子的首先进里边去">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第二句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="就算你是一流工程师">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第二句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="开始拿剪刀出来 拿那个手机">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第三句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="就算你出报告再完美">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第三句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="手机上有电筒 用手机照射">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第四句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="我叫你改报告你就要改">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第四句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="寻找那个比较新的电动车">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第五句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="毕竟我是客户">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第五句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="六月六号 两名男子再次出现">
+</p>
 
-            <p>
-                <label class="w3-text-blue">
-                    <b>第六句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="客户了不起啊">
-            </p>
-
-            <p>
-                <label class="w3-text-blue">
-                    <b>第七句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="sorry 客户真的了不起">
-            </p>
-
-            <p>
-                <label class="w3-text-blue">
-                    <b>第八句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="以后叫他天天改报告">
-            </p>
-
-            <p>
-                <label class="w3-text-blue">
-                    <b>第九句</b>
-                </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="天天改 天天改">
-            </p>
+<p>
+    <label class="w3-text-blue">
+        <b>第六句</b>
+    </label>
+    <input class="w3-input w3-border" name="first" type="text" placeholder="民警立即将两人抓获">
+</p>
 
             <div id="result"></div>
 
